# citation_contamination_intelligent_system

./: .gitattributes  .replit  pyproject.toml  replit.md
attached_assets/: Pasted--REPLIT-AGENT-MASTER-EXECUTION-PROMPT-FULL-SYSTEM-LOCKE_1776421136639.txt  Pasted-Scholarly-Retraction-Propagation-Citation-Contamination_1776439850639.txt  Pasted-You-are-improving-an-existing-citation-contamination-tr_1776486763322.txt
citation-app/: README.md  app.py  download_retraction_watch.py  flask_app.py  main.py  process_data.py  start.sh
citation-app/.streamlit/: config.toml
citation-app/data/: cache_citations.json  cache_metadata.json  retraction_watch.csv
citation-app/modules/: cache.py  citation_fetcher.py  doi_validator.py  graph_builder.py  graph_viz.py  metadata_fetcher.py  pipeline.py  retraction_detector.py  risk_engine.py  sentiment_analyzer.py
citation-app/templates/: base.html  index.html  results.html  waiting.html
