[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "python-levenshtein>=0.27.3",
    "pyvis>=0.3.2",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "thefuzz>=0.22.1",
]
